--- a/src/locales/nl.json
+++ b/src/locales/nl.json
@@ -51,10 +51,11 @@
   "based_on_one_person": "Gebaseerd op {persons} personen",
   "return_to_calendar": "Terug naar de kalender",
   "close": "Sluiten",
-  "cancel_insurance_normal_long": "Standaard Annuleringsverzekering",
-  "cancel_insurance_normal_desc": "Met de Standaard Annuleringsverzekering bent u goed verzekerd, als u uw reis moet annuleren. Naast de kosten van de annulering zijn ook de kosten van de ongebruikte reisdagen verzekerd. Dus mist u een deel van uw reis, bijvoorbeeld omdat u eerder naar huis moet? Dan ontvangt u een vergoeding voor iedere dag dat u niet van uw reis heeft kunnen genieten.",
+  "cancel_insurance_normal_long": "Kortlopende Annuleringsverzekering",
+  "cancel_insurance_normal_desc": "Je hebt een prachtige vakantie geboekt, dan mag een annuleringsverzekering niet ontbreken! Het kan gebeuren dat je geboekte vakantie niet door kan gaan, of dat je halverwege de vakantie onverwachts naar huis moet door bijvoorbeeld een ernstige ziekte. De annuleringsverzekering van RecreatieVerzekeringen is ideaal, deze geldt namelijk niet alleen voor je vertrek, maar ook tijdens de vakantie.",
+  "cancel_insurance_more_insured": "Er is meer verzekerd dan je denkt",
+  "cancel_insurance_more_insured_desc": "Wist je dat bij zwangerschap, een nieuwe baan of scheiding je een beroep kunt doen op een annuleringsverzekering? Veel mensen verwachten dat een annuleringsverzekering alleen geldig is bij ziekte of overlijden.",
   "cancel_insurance_all_risk_long": "Allrisk Annuleringsverzekering",
-  "cancel_insurance_desc": "Er kunnen zich helaas altijd situaties voordoen, waardoor u uw vakantie moet afzeggen. Of het kan noodzakelijk zijn dat u later vertrekt of eerder terugkeert. Met een annuleringsverzekering hoeft u zelf niet voor deze kosten op te draaien. Alleen inwoners uit Nederland, België en Duitsland kunnen de verzekeringen afsluiten. U heeft de keuze uit twee annuleringsverzekeringen:",
   "cancel_insurance_all_risk_desc": "Met Allrisk Annulering krijg je 100% van de annuleringskosten vergoed als je om een standaard reden annuleert, zoals een ziekte waardoor je niet meer op reis kunt. Of het overlijden van een grootouder. Wil je annuleren om een andere reden die voor jou persoonlijk belangrijk is? Dan krijg je 75% van de annuleringskosten vergoed.\n Maar let op: deze verzekering stelt wel een paar voorwaarden aan het annuleren. Zo moet de reden van annulering ‘onvoorzien’ zijn en ‘buiten je schuld’. De verzekering biedt dus geen dekking voor annuleringsredenen waarvan je vóór het afsluiten van de verzekering al op de hoogte was (niet onvoorzien) of waaraan je zelf iets had kunnen doen (niet buiten eigen schuld). Raadpleeg de voorwaarden voor de uitzonderingen.",
   "terms_and_costs": "Premie en voorwaarden",
   "costs_normal_cancel_insurance": "Premie Standaard annuleringsverzekering:",
