--- a/src/locales/nl.json
+++ b/src/locales/nl.json
@@ -55,14 +55,12 @@
   "cancel_insurance_normal_desc": "Je hebt een prachtige vakantie geboekt, dan mag een annuleringsverzekering niet ontbreken! Het kan gebeuren dat je geboekte vakantie niet door kan gaan, of dat je halverwege de vakantie onverwachts naar huis moet door bijvoorbeeld een ernstige ziekte. De annuleringsverzekering van RecreatieVerzekeringen is ideaal, deze geldt namelijk niet alleen voor je vertrek, maar ook tijdens de vakantie.",
   "cancel_insurance_more_insured": "Er is meer verzekerd dan je denkt",
   "cancel_insurance_more_insured_desc": "Wist je dat bij zwangerschap, een nieuwe baan of scheiding je een beroep kunt doen op een annuleringsverzekering? Veel mensen verwachten dat een annuleringsverzekering alleen geldig is bij ziekte of overlijden.",
-  "cancel_insurance_all_risk_long": "Allrisk Annuleringsverzekering",
-  "cancel_insurance_all_risk_desc": "Met Allrisk Annulering krijg je 100% van de annuleringskosten vergoed als je om een standaard reden annuleert, zoals een ziekte waardoor je niet meer op reis kunt. Of het overlijden van een grootouder. Wil je annuleren om een andere reden die voor jou persoonlijk belangrijk is? Dan krijg je 75% van de annuleringskosten vergoed.\n Maar let op: deze verzekering stelt wel een paar voorwaarden aan het annuleren. Zo moet de reden van annulering ‘onvoorzien’ zijn en ‘buiten je schuld’. De verzekering biedt dus geen dekking voor annuleringsredenen waarvan je vóór het afsluiten van de verzekering al op de hoogte was (niet onvoorzien) of waaraan je zelf iets had kunnen doen (niet buiten eigen schuld). Raadpleeg de voorwaarden voor de uitzonderingen.",
-  "terms_and_costs": "Premie en voorwaarden",
-  "costs_normal_cancel_insurance": "Premie Standaard annuleringsverzekering:",
-  "costs_allrisk_cancel_insurance": "Premie Allrisk annuleringsverzekering:",
-  "666_costs": "6.66% van de reissom",
-  "847_costs": "8.47% van de reissom",
-  "more_information": "Meer informatie",
+  "cancel_insurance_important": "Belangrijk",
+  "cancel_insurance_important_message": "Voor een optimale dekking van je annuleringsverzekering is het belangrijk dat je deze afsluit binnen 7 dagen na het boeken van de vakantie.",
+  "cancel_insurance_for_whom": "Voor wie?",
+  "cancel_insurance_for_whom_explain": "Deze verzekering is voor maximaal 4 gezinnen of 9 reisgenoten (geen gezinsleden)",
+  "cancel_insurance_questions": "Veelgestelde vragen",
+  "cancel_insurance_questions_explain": "Klik hier <a href='https://recreatieverzekeringen.nl/veelgestelde-vragen '>(https://recreatieverzekeringen.nl/veelgestelde-vragen)</a> voor de veelgestelde vragen.",
   "show_terms": "Bekijk de voorwaarden",
   "terms": "Voorwaarden",
   "reviews_note_link": "BUKAZU Boekingssysteem houdt onafhankelijk reviews bij. Deze reviews zijn verzameld na het verblijf van de gasten in de accommodatie. Er is controle op de combinatie boekingsnummer en e-mailadres.",
