Update localization files to include arrival and departure dates for various accommodation types in multiple languages.

--- a/src/locales/de.json
+++ b/src/locales/de.json
@@ -24,6 +24,22 @@
   "babies_from": "(bis einschl. {babies} Jahre)",
   "adults": "Erwachsene",
   "adults_from": "(ab {age} Jahre)",
+  "camper_spot.arrival_date": "Anreisedatum",
+  "camper_spot.departure_date": "Abreisedatum",
+  "camper_spot.arrival": "Ankunft",
+  "camper_spot.departure": "Abreise",
+  "camping_place.arrival_date": "Anreisedatum",
+  "camping_place.departure_date": "Abreisedatum",
+  "camping_place.arrival": "Ankunft",
+  "camping_place.departure": "Abreise",
+  "bnb.arrival_date": "Anreisedatum",
+  "bnb.departure_date": "Abreisedatum",
+  "bnb.arrival": "Ankunft",
+  "bnb.departure": "Abreise",
+  "hotelroom.arrival_date": "Anreisedatum",
+  "hotelroom.departure_date": "Abreisedatum",
+  "hotelroom.arrival": "Ankunft",
+  "hotelroom.departure": "Abreise",
   "children": "Kinder",
   "children_from": "(von {from} bis einschl. {til} Jahre)",
   "house.arrival_date": "Anreisedatum",
