--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -23,6 +23,22 @@
   "babies_from": "(up to the age of {babies})",
   "adults": "Adults",
   "adults_from": "(from the age of {age})",
+  "camper_spot.arrival_date": "Arrival date",
+  "camper_spot.departure_date": "Departure date",
+  "camper_spot.arrival": "Arrival",
+  "camper_spot.departure": "Departure",
+  "camping_place.arrival_date": "Arrival date",
+  "camping_place.departure_date": "Departure date",
+  "camping_place.arrival": "Arrival",
+  "camping_place.departure": "Departure",
+  "bnb.arrival_date": "Arrival date",
+  "bnb.departure_date": "Departure date",
+  "bnb.arrival": "Arrival",
+  "bnb.departure": "Departure",
+  "hotelroom.arrival_date": "Arrival date",
+  "hotelroom.departure_date": "Departure date",
+  "hotelroom.arrival": "Arrival",
+  "hotelroom.departure": "Departure",
   "children": "Children",
   "children_from": "(from {from} to {til} years inclusive)",
   "house.arrival_date": "Arrival date",
