--- a/src/locales/fr.json
+++ b/src/locales/fr.json
@@ -23,6 +23,22 @@
   "babies_from": "(jusqu'a {babies} ans)",
   "adults": "Nombre d'adults",
   "adults_from": "(à partir de {age} ans)",
+  "camper_spot.arrival_date": "Date d'arrivée",
+  "camper_spot.departure_date": "Date de départ",
+  "camper_spot.arrival": "Arrivée",
+  "camper_spot.departure": "Départ",
+  "camping_place.arrival_date": "Date d'arrivée",
+  "camping_place.departure_date": "Date de départ",
+  "camping_place.arrival": "Arrivée",
+  "camping_place.departure": "Départ",
+  "bnb.arrival_date": "Date d'arrivée",
+  "bnb.departure_date": "Date de départ",
+  "bnb.arrival": "Arrivée",
+  "bnb.departure": "Départ",
+  "hotelroom.arrival_date": "Date d'arrivée",
+  "hotelroom.departure_date": "Date de départ",
+  "hotelroom.arrival": "Arrivée",
+  "hotelroom.departure": "Départ",
   "children": "Nombre d'enfants",
   "children_from": "(de {from} à {til} ans)",
   "house.arrival_date": "Date d'arrivée",
