--- a/src/locales/it.json
+++ b/src/locales/it.json
@@ -23,6 +23,22 @@
   "babies_from": "(fino a {babies} anni)",
   "adults": "Numero di adulti",
   "adults_from": "(dai {age} anni)",
+  "camper_spot.arrival_date": "Data di arrivo",
+  "camper_spot.departure_date": "Data di partenza",
+  "camper_spot.arrival": "Arrivo",
+  "camper_spot.departure": "Partenza",
+  "camping_place.arrival_date": "Data di arrivo",
+  "camping_place.departure_date": "Data di partenza",
+  "camping_place.arrival": "Arrivo",
+  "camping_place.departure": "Partenza",
+  "bnb.arrival_date": "Data di arrivo",
+  "bnb.departure_date": "Data di partenza",
+  "bnb.arrival": "Arrivo",
+  "bnb.departure": "Partenza",
+  "hotelroom.arrival_date": "Data di arrivo",
+  "hotelroom.departure_date": "Data di partenza",
+  "hotelroom.arrival": "Arrivo",
+  "hotelroom.departure": "Partenza",
   "children": "Numero di bambini",
   "children_from": "(da {from} a {til} anni)",
   "house.arrival_date": "Data di arrivo",
