--- a/src/locales/es.json
+++ b/src/locales/es.json
@@ -23,6 +23,22 @@
   "babies_from": "(hasta {babies} años)",
   "adults": "Numero de adultos",
   "adults_from": "(a partir de {age} años)",
+  "camper_spot.arrival_date": "Fecha de llegada",
+  "camper_spot.departure_date": "Fecha de salida",
+  "camper_spot.arrival": "llegada",
+  "camper_spot.departure": "Salida",
+  "camping_place.arrival_date": "Fecha de llegada",
+  "camping_place.departure_date": "Fecha de salida",
+  "camping_place.arrival": "llegada",
+  "camping_place.departure": "Salida",
+  "bnb.arrival_date": "Fecha de llegada",
+  "bnb.departure_date": "Fecha de salida",
+  "bnb.arrival": "llegada",
+  "bnb.departure": "Salida",
+  "hotelroom.arrival_date": "Fecha de llegada",
+  "hotelroom.departure_date": "Fecha de salida",
+  "hotelroom.arrival": "llegada",
+  "hotelroom.departure": "Salida",
   "children": "Numero de niños",
   "children_from": "(de {from} a {til} años)",
   "house.arrival_date": "Fecha de llegada",
